--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="HOMMY">
-    <meta name="author" content="lore-lml">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="HOMMY">
+  <meta name="author" content="lore-lml">
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/style.css" type="text/css">
-    <title>HOMMY</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/style.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+  <title>HOMMY</title>
 </head>
-<body>
-    <div class="categories">
-        <h1>LISTA DELLE CATEGORIE</h1>
-        <ul>
-            {% for element in res['categories'] %}
-                <li>
-                    id: {{ element['id'] }} - name: {{ element['name'] }} - challenges: {{ element['n_chal'] }}
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><script src="static/hommy.js" type="text/javascript"></script>
+<body>
+  <div class="categories">
+    <h1>Scegli Tra le seguenti categorie</h1>
+    <ul>
+      <div id="box">
+
+        {% for element in res['categories'] %}
+            <li id="{{ element['name'] }}">
+                {{ element['name'] }} - ({{ element['n_chal'] }})
+            </li>
+        {% endfor %}
+
+      </div>
+    </ul>
+  </div>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="static/hommy.js" type="text/javascript"></script>
 </body>
 </html>
