--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -9,16 +9,24 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/style.css" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
     <title>HOMMY</title>
 </head>
 <body>
+    <!--<audio controls autoplay loop id="music">
+        <source src="{{ url_for('static', filename='Hall Of Fame.mp3') }}" type="audio/mp3">
+    </audio>-->
     <div class="categories">
-        <h1>{{ res }}</h1>
+        <h1>{{ res['challenges'][0]['name'] }} - {{ res['challenges'][0]['description'] }}</h1>
+
+        <button class="btn btn-primary" id="play">PLAY</button>
+        <button class="btn btn-primary" id="stop">STOP</button>
+
     </div>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><script src="static/hommy.js" type="text/javascript"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="{{ url_for('static', filename='chal.js') }}" type="text/javascript"></script>
 </body>
 </html>
