--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,7 +10,7 @@
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!--<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">-->
+  <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">-->
   <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
   <title>HOMMY</title>
 </head>
