--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="lightGreen">#93DE74</color>
+    <color name="orange">#ffa500</color>
+    <color name="gray">#b3b3b3</color>
 </resources>
