--- a/templates/categories.html
+++ b/templates/categories.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="categories">
-    <h1>Scegli Tra le seguenti categorie</h1>
+    <h1>Choose one of the following Categories</h1>
     <ul>
       <div id="box">
 
