--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -15,6 +15,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/challenge_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -45,7 +46,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:text="@string/trivia_description"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#fff"
@@ -53,12 +53,13 @@
         android:textStyle="bold" />
 
     <LinearLayout
+        android:id="@+id/answer_layout1"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        style="?android:attr/buttonBarStyle"
         android:orientation="horizontal">
 
         <Button
@@ -89,10 +90,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/answer_layout2"
         style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal">
@@ -123,4 +125,17 @@
             android:textColor="#fff"
             android:textSize="30sp" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/start_challenge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/rounded_button"
+        android:text="START"
+        android:textColor="#fff"
+        android:textSize="30sp" />
+        android:text="Button" />
 </LinearLayout>
