--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!--<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">-->
   <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
   <title>HOMMY</title>
 </head>
 
