--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -49,6 +49,7 @@
                 android:id="@+id/cat_a"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:textAlignment="center"
                 android:textColor="#fff"
                 android:textSize="25sp" />
@@ -75,6 +76,7 @@
                 android:id="@+id/cat_b"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:textAlignment="center"
                 android:textColor="#fff"
                 android:textSize="25sp" />
@@ -101,6 +103,7 @@
                 android:id="@+id/cat_c"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:textAlignment="center"
                 android:textColor="#fff"
                 android:textSize="25sp" />
@@ -127,6 +130,7 @@
                 android:id="@+id/cat_d"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:textAlignment="center"
                 android:textColor="#fff"
                 android:textSize="25sp" />
